Changes in Caudium 1.3 since Caudium 1.2.1
------------------------------------------
- Apache/NSCA SSI tags are now handled into a separate module called
  SSI Compat Tags (ssi_compat.pike). Don't forget to add this to your
  configuration interface if you need this support...
- Fix pluging path for rimage module.
- modules/scripting/oldcgi.pike and modules/scripting/fcgi.pike are now 
  deprecated. For FastCGI support you can use now fastcgi.pike that work
  mutch better than the old one.
- Fix submitted in caudium_general ml about corrupted Accessed db.
- Fix for sf bug #634688: Backtrace with cache and start as user.
- Fixed error in setools.pike regarding user agent & regexp
- We can now accept a certification chain instead of just a single certificate.
  Should be provided as a series of filenames sparated by commas. The cacert
  should be first and the server cert should the be last.
- Old auth modules are now in server/deprecated_modules.
- IP Less module is now in server/deprecated_modules. Don't forget to add this
  to you module list if you still need it.
- Fix an error in disk_cache.pike on hash() call since it has changed a lot
  since pike 7.0.
- mod_perl / Perl support for Caudium is known to work now... but only with
  perl 5.8. This close sf bug #512601.
- Added a README.Perl
- Fix for SF Bug #652095 (lowercase boundary in CONTENT_TYPE)
- Caudium.http_encode_url() used instead of Pike routine.
  *COMPAT Warning* Direct calls to http_encode_url() work only when
  API_COMPAT is set.
- Caudium.http_encode_cookie() used instead of Pike routine.
  *COMPAT Warning* Direct calls to http_encode_cookie() work only when
  API_COMPAT is set.
- Caudium.http_encode_string() used instead of Pike's base_server/http.pike one.
  *COMPAT Warning* Direct calls to http_encode_string() work only when
  API_COMPAT is set.
- Stdio.mkdirhier() used everywhere. 
  *COMPAT Warning* Direct calls to mkdirhier() work only when API_COMPAT
  is set.