@@ -129,4 +129,13 @@
 #define POST_MAX_BODY_SIZE 1024*16
 #endif
 
+/*
+ * Load all configurations (virtual servers and their modules) at
+ * Caudium startup.
+ * This is not enabled for performance reasons (eg Caudium with lots of
+ * virtuals servers that are mostly unused.).
+ */
+#undef LOAD_CONFIGS_STARTUP
+
+
 #endif
